--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
+  <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
-
 </html>
