--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flower Sprouting Animation</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="script.js"></script>
+    <div class="garden">
+        <div class="flower" id="flower1"></div>
+        <div class="flower" id="flower2"></div>
+        <div class="flower" id="flower3"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
