--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flower Growing Animation</title>
+    <title>Realistic Flower Bouquet Animation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,6 +11,8 @@
         <div class="flower" id="flower1"></div>
         <div class="flower" id="flower2"></div>
         <div class="flower" id="flower3"></div>
+        <div class="flower" id="flower4"></div>
+        <div class="flower" id="flower5"></div>
     </div>
     <script src="script.js"></script>
 </body>
