--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realistic Flower Bouquet Animation</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Growing Rose Animation</title>
+    <style>
+        body {
+            background-color: #87CEEB; /* Sky blue */
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            height: 100vh;
+            margin: 0;
+        }
+        canvas {
+            border: 1px solid #000;
+        }
+    </style>
 </head>
 <body>
-    <div class="garden">
-        <div class="flower" id="flower1"></div>
-        <div class="flower" id="flower2"></div>
-        <div class="flower" id="flower3"></div>
-        <div class="flower" id="flower4"></div>
-        <div class="flower" id="flower5"></div>
-    </div>
+    <canvas id="roseCanvas" width="400" height="600"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
