--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         }
         canvas {
             border: 1px solid #000;
+            cursor: pointer; /* Change cursor to pointer */
         }
     </style>
 </head>
 <body>
-    <canvas id="roseCanvas" width="400" height="600"></canvas>
+    <canvas id="roseCanvas" width="800" height="600"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
