--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <div id="colorPalette">
+    <div id="colorPalette" style="position: fixed; top: 10px; left: 10px; z-index: 2000;">
         <div class="color-option" style="background-color: #FF1493;" data-color="#FF1493"></div>
         <div class="color-option" style="background-color: #FFD700;" data-color="#FFD700"></div>
         <div class="color-option" style="background-color: #FF4500;" data-color="#FF4500"></div>
