best commit ever

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="flower-icon-png.png" type="image/png">
     <title>Victoria's Garden</title>
     <style>
         body {
