--- a/index.html
+++ b/index.html
@@ -1,43 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="flower-icon-png.png" type="image/png">
     <title>Victoria's Garden</title>
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-        }
-        canvas {
-            display: block;
-        }
-        #colorPalette {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            z-index: 10;
-        }
-        .color-option {
-            width: 30px;
-            height: 30px;
-            display: inline-block;
-            border: 2px solid #fff;
-            cursor: pointer;
-        }
+        body { margin: 0; overflow: hidden; }
+        canvas { display: block; }
+        #colorPalette { position: absolute; top: 10px; left: 10px; z-index: 1; }
+        .colorOption { width: 30px; height: 30px; border: 2px solid white; cursor: pointer; }
     </style>
 </head>
 <body>
     <div id="colorPalette">
-        <div class="color-option" style="background-color: #FF1493;" data-color="#FF1493"></div>
-        <div class="color-option" style="background-color: #FFD700;" data-color="#FFD700"></div>
-        <div class="color-option" style="background-color: #FF4500;" data-color="#FF4500"></div>
-        <div class="color-option" style="background-color: #ADFF2F;" data-color="#ADFF2F"></div>
-        <div class="color-option" style="background-color: #9370DB;" data-color="#9370DB"></div>
+        <div class="colorOption" style="background-color: red;" data-color="red"></div>
+        <div class="colorOption" style="background-color: green;" data-color="green"></div>
+        <div class="colorOption" style="background-color: blue;" data-color="blue"></div>
     </div>
-    <canvas id="gardenCanvas"></canvas>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
+    <script>
+        // Initialize Three.js scene
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        // Lighting
+        const ambientLight = new THREE.AmbientLight(0x404040);
+        scene.add(ambientLight);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+        directionalLight.position.set(1, 1, 1);
+        scene.add(directionalLight);
+
+        // Camera position
+        camera.position.z = 5;
+
+        // Ground
+        const groundGeometry = new THREE.PlaneGeometry(10, 10, 10, 10);
+        const groundMaterial = new THREE.MeshLambertMaterial({ color: 0x355E3B });
+        const ground = new THREE.Mesh(groundGeometry, groundMaterial);
+        ground.rotation.x = -Math.PI / 2;
+        scene.add(ground);
+
+        // Flowers array
+        const flowers = [];
+        let currentColor = 'red';
+
+        // Flower creation function
+        function createFlower(x, y, z, color) {
+            const flowerGeometry = new THREE.ConeGeometry(0.2, 0.5, 32);
+            const flowerMaterial = new THREE.MeshLambertMaterial({ color: color });
+            const flower = new THREE.Mesh(flowerGeometry, flowerMaterial);
+            flower.position.set(x, y, z);
+            scene.add(flower);
+            flowers.push(flower);
+        }
+
+        // Event listener for clicks
+        document.addEventListener('click', (event) => {
+            const x = (event.clientX / window.innerWidth) * 10 - 5;
+            const y = 0;
+            const z = (event.clientY / window.innerHeight) * 10 - 5;
+            createFlower(x, 0.25, z, currentColor);
+        });
+
+        // Color selection
+        document.querySelectorAll('.colorOption').forEach(option => {
+            option.addEventListener('click', (event) => {
+                currentColor = event.target.dataset.color;
+            });
+        });
+
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
 </body>
 </html>
