--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Victoria's Garden</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="flower-icon-png.png" type="image/x-icon">
+    <link rel="`icon`" href="flower-icon-png.png" type="image/x-icon">
+    <style>
+        canvas { background: black; display: block; margin: auto; }
+    </style>
 </head>
 <body>
-    <script src="script.js"></script>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
