--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="flower-icon-png.png" type="icon/img">
     <title>Victoria's Garden</title>
-    <link rel="`icon`" href="flower-icon-png.png" type="image/x-icon">
     <style>
-        canvas { background: black; display: block; margin: auto; }
+        body { text-align: center; background: #121212; color: white; font-family: Arial, sans-serif; }
+        canvas { background: black; border: 2px solid white; }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <h1>Creature Battle</h1>
+    <canvas id="gameCanvas" width="600" height="400"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
