--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="flower-icon-png.png" type="icon/img">
     <title>Victoria's Garden</title>
-    <style>
-        body { text-align: center; background: #121212; color: white; font-family: Arial, sans-serif; }
-        canvas { background: black; border: 2px solid white; }
-    </style>
 </head>
 <body>
-    <h1>Creature Battle</h1>
-    <canvas id="gameCanvas" width="600" height="400"></canvas>
-    <script src="game.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
