--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="flower-icon-png.png" type="icon/img">
-    <title>Victoria's Garden</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VictoriaScript - VS</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>CSS Animation Playground</h1>
+    <div class="animation-box" id="animationBox"></div>
+    <div class="controls">
+      <label for="duration">Duration</label>
+      <input type="range" id="duration" min="1" max="5" step="0.1" value="2">
+      
+      <label for="ease">Easing</label>
+      <select id="ease">
+        <option value="ease">Ease</option>
+        <option value="linear">Linear</option>
+        <option value="ease-in">Ease-in</option>
+        <option value="ease-out">Ease-out</option>
+        <option value="ease-in-out">Ease-in-out</option>
+      </select>
+
+      <button onclick="applyAnimation()">Apply Animation</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
