--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VictoriaScript - VS</title>
+  <title>VS</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,8 +22,9 @@
         <option value="ease-out">Ease-out</option>
         <option value="ease-in-out">Ease-in-out</option>
       </select>
-
-      <button onclick="applyAnimation()">Apply Animation</button>
+    </div>
+    <div id="scrollIndicator">
+      <p>Scroll to see more animations!</p>
     </div>
   </div>
   <script src="script.js"></script>
