--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VS</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="flower-icon-png.png" type="image/x-icon">
 </head>
 <body>
-    
+    <h1>Work in progress.</h1>
 </body>
 </html>
