--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" href="flower-icon-png.png" type="image/x-icon">
 </head>
 <body>
-    <h1>fullStack javaScript developer</h1>
+    <h1>fs js dev</h1>
 </body>
 </html>
