--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VS</title>
+    <title>Random Color Picker</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="flower-icon-png.png" type="image/x-icon">
 </head>
 <body>
-    <h1>fs js dev</h1>
+    <div class="container">
+        <h1>Random Color Picker</h1>
+        <div class="color-box" id="colorBox">
+            <p id="colorCode">#FFFFFF</p>
+        </div>
+        <button id="generateBtn">Generate Color</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
