--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Color Picker</title>
+    <title>VanillaScript</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="flower-icon-png.png" type="img/icon">
 </head>
 <body>
-    <div class="container">
-        <h1>Random Color Picker</h1>
-        <div class="color-box" id="colorBox">
-            <p id="colorCode">#FFFFFF</p>
-        </div>
-        <button id="generateBtn">Generate Color</button>
-    </div>
+    <h1>Welcome to VanillaScript!</h1>
+    <p>This course will cover the following:</p>
+    <ul>
+        <li>Introduction to Software Engineering</li>
+        <li>Introduction to HTML, CSS, & JavaScript</li>
+        <li>Getting Started with Git and GitHub</li>
+        <li>JavaScript Programming Essentials</li>
+        <li>Developing Front-End Apps with React</li>
+        <li>Developing Back-End Apps with Node.js and Express</li>
+        <li>Get Started With Cloud Native, DevOps, and NoSQL</li>
+        <li>Introduction to containers w/ Docker, Kubernetes & OpenShift</li>
+        <li>Application Development using Microservices and Serverless</li>
+        <li>Node.js & MongoDB: Developing Back-end Database Applications</li>
+        <li>JavaScript Full Stack Capstone Project</li>
+        <li>Software Developer Career Guide and Interview Preparation</li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
