--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <li>JavaScript Full Stack Capstone Project</li>
         <li>Software Developer Career Guide and Interview Preparation</li>
     </ul>
+<h1>What you'll obtain after completing this site:</h1>
+<ul><li>Master the full-stack development languages, frameworks, tools, and technologies to develop job-ready skills valued by employers.</li>
+<li>Write, deploy, and scale cloud-native back-end applications using Node, NoSQL databases, containers, microservices, and serverless.</li>
+<li>Develop websites and front-end software using HTML, CSS, JavaScript, and React.</p>
+<p>Employ DevOps practices and Agile methodologies to continuously build and deploy software using CI/CD tools.</li></ul>
     <script src="script.js"></script>
 </body>
 </html>
