nested list test

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>This course will cover the following:</p>
     <ul>
         <li>Introduction to Software Engineering</li>
+<ul><li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools, technologies and stacks.</li>
+<li>List different types of programming languages and create basic programming constructs such as loops and conditions using Python.</li>
+<li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
+<li>Summarize the skills required in software engineering and describe the career options it provides.</li></ul>
         <li>Introduction to HTML, CSS, & JavaScript</li>
         <li>Getting Started with Git and GitHub</li>
         <li>JavaScript Programming Essentials</li>
@@ -24,7 +28,7 @@
         <li>JavaScript Full Stack Capstone Project</li>
         <li>Software Developer Career Guide and Interview Preparation</li>
     </ul>
-<h1>What you'll obtain after completing this site:</h1>
+<h2>What you'll obtain after completing this site:</h2>
 <ul><li>Master the full-stack development languages, frameworks, tools, and technologies to develop job-ready skills valued by employers.</li>
 <li>Write, deploy, and scale cloud-native back-end applications using Node, NoSQL databases, containers, microservices, and serverless.</li>
 <li>Develop websites and front-end software using HTML, CSS, JavaScript, and React.</li>
