title change and nested list added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="flower-icon-png.png" type="img/icon">
 </head>
 <body>
-    <h1>Welcome to VanillaScript!</h1>
+    <h1>VSCRIPT</h1>
     <p>This course will cover the following:</p>
     <ul>
         <li>Introduction to Software Engineering</li>
@@ -17,6 +17,10 @@
 <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
 <li>Summarize the skills required in software engineering and describe the career options it provides.</li></ul>
         <li>Introduction to HTML, CSS, & JavaScript</li>
+<ul><li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end, server-side, and full stack.</li>
+<li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
+<li>Create and structure basic web pages using HTML and style them with CSS.</li>
+<li>Develop dynamic web pages with interactive features using JavaScript.</li></ul>
         <li>Getting Started with Git and GitHub</li>
         <li>JavaScript Programming Essentials</li>
         <li>Developing Front-End Apps with React</li>
