--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
 <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
 <li>Create and structure basic web pages using HTML and style them with CSS.</li>
 <li>Develop dynamic web pages with interactive features using JavaScript.</li></ul>
-        <li>Getting Started with Git and GitHub</li>
+        <li>Getting Started with Git and GitHub</li><ul><li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
+<li>Explain basic Git concepts such as repositories and branches used for distributed version control and social coding.</li>
+<li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</li>
+<li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
         <li>JavaScript Programming Essentials</li>
+<ul><li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore arrays, DOM, AJAX, and debugging techniques.</li>
+<li>Explore handling errors and exceptions, functions and events, apply string manipulation and error-handing techniques, and traverse the DOM.</li>
+<li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss modifying the appearance of DOM elements.</li>
+<li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages, and AJAX to fetch and display data from APIs.</li>
         <li>Developing Front-End Apps with React</li>
         <li>Developing Back-End Apps with Node.js and Express</li>
         <li>Get Started With Cloud Native, DevOps, and NoSQL</li>
