nested the lists and css'd the page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,43 +8,114 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="flower-icon-png.png" type="img/icon">
 </head>
+
 <body>
     <h1>VSCRIPT</h1>
     <p>This course will cover the following:</p>
     <ul>
         <li>Introduction to Software Engineering</li>
-<ul><li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools, technologies and stacks.</li>
-<li>List different types of programming languages and create basic programming constructs such as loops and conditions using Python.</li>
-<li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
-<li>Summarize the skills required in software engineering and describe the career options it provides.</li></ul>
+        <ul>
+            <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
+                technologies and stacks.</li>
+            <li>List different types of programming languages and create basic programming constructs such as loops and
+                conditions using Python.</li>
+            <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
+            <li>Summarize the skills required in software engineering and describe the career options it provides.</li>
+        </ul>
         <li>Introduction to HTML, CSS, & JavaScript</li>
-<ul><li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end, server-side, and full stack.</li>
-<li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
-<li>Create and structure basic web pages using HTML and style them with CSS.</li>
-<li>Develop dynamic web pages with interactive features using JavaScript.</li></ul>
-        <li>Getting Started with Git and GitHub</li><ul><li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
-<li>Explain basic Git concepts such as repositories and branches used for distributed version control and social coding.</li>
-<li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</li>
-<li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
-        <li>JavaScript Programming Essentials</li>
-<ul><li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore arrays, DOM, AJAX, and debugging techniques.</li>
-<li>Explore handling errors and exceptions, functions and events, apply string manipulation and error-handing techniques, and traverse the DOM.</li>
-<li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss modifying the appearance of DOM elements.</li>
-<li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages, and AJAX to fetch and display data from APIs.</li>
-        <li>Developing Front-End Apps with React</li>
-        <li>Developing Back-End Apps with Node.js and Express</li>
-        <li>Get Started With Cloud Native, DevOps, and NoSQL</li>
-        <li>Introduction to containers w/ Docker, Kubernetes & OpenShift</li>
-        <li>Application Development using Microservices and Serverless</li>
-        <li>Node.js & MongoDB: Developing Back-end Database Applications</li>
-        <li>JavaScript Full Stack Capstone Project</li>
-        <li>Software Developer Career Guide and Interview Preparation</li>
-    </ul>
-<h2>What you'll obtain after completing this site:</h2>
-<ul><li>Master the full-stack development languages, frameworks, tools, and technologies to develop job-ready skills valued by employers.</li>
-<li>Write, deploy, and scale cloud-native back-end applications using Node, NoSQL databases, containers, microservices, and serverless.</li>
-<li>Develop websites and front-end software using HTML, CSS, JavaScript, and React.</li>
-<li>Employ DevOps practices and Agile methodologies to continuously build and deploy software using CI/CD tools.</li></ul>
-    <script src="script.js"></script>
+        <ul>
+            <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end,
+                server-side, and full stack.</li>
+            <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
+            <li>Create and structure basic web pages using HTML and style them with CSS.</li>
+            <li>Develop dynamic web pages with interactive features using JavaScript.</li>
+        </ul>
+        <li>Getting Started with Git and GitHub</li>
+        <ul>
+            <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
+            <li>Explain basic Git concepts such as repositories and branches used for distributed version control and
+                social coding.</li>
+            <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to
+                collaborate on a team project.</li>
+            <li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
+            <li>JavaScript Programming Essentials</li>
+            <ul>
+                <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore
+                    arrays, DOM, AJAX, and debugging techniques.</li>
+                <li>Explore handling errors and exceptions, functions and events, apply string manipulation and
+                    error-handing techniques, and traverse the DOM.</li>
+                <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss
+                    modifying the appearance of DOM elements.</li>
+                <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and
+                    pages, and AJAX to fetch and display data from APIs.</li>
+            </ul>
+            <li>Developing Front-End Apps with React</li>
+            <ul>
+                <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including React, JSX, and ES6.</li>
+                <li>Build dynamic front-end applications quickly and easily with reusable React components.</li>
+                <li>Employ various React concepts and features, including props, states, hooks, forms, and Redux.</li>
+                <li>Demonstrate your React skills by building several front-end applications such as a shopping cart.</li>
+            </ul>
+            <li>Developing Back-End Apps with Node.js and Express</li>
+            <ul><li>Create server-side applications using the Node.js JavaScript run time.</li>
+            <li>Extend your Node.js applications with third-party packages and frameworks, including Express.</li>
+            <li>Use npm to manage Node.js packages in your Node.js application. </li>
+            <li>Develop asynchronous callback functions and promises to complete asynchronous operations.</li>
+        </ul>
+            <li>Get Started With Cloud Native, DevOps, and NoSQL</li>
+            <ul>
+                <li>Explore cloud native applications concepts and methodologies, recognize CNCF’s impact, and analyse the benefits of CI/CD, Agile, and Scrum.</li>
+                <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the principles and characteristics of MongoDB.</li>
+                <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile development process.</li>
+                <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data operations using MongoDB and CRUD operations.</li>
+            </ul>
+            <li>Introduction to containers w/ Docker, Kubernetes & OpenShift</li>
+            <ul>
+                <li>Using containers, learn how to move applications quickly across any environment.</li>
+                <li>Build cloud native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
+                <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container management system.</li>
+                <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services, replicasets, and others in a declarative way.</li>
+            </ul>
+            <li>Application Development using Microservices and Serverless</li>
+            <ul>
+                <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic architectures.</li>
+                <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test APIs.</li>
+                <li>Create, and deploy microservices using Docker containers and serverless technologies like IBM Code Engine.</li>
+                <li>Practice hands-on with labs and projects using a no-charge cloud-based environment.</li>
+            </ul>
+            <li>Node.js & MongoDB: Developing Back-end Database Applications</li>
+            <ul>
+                <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases</li>
+                <li>Develop secure RESTful APIs using Node and Express to communicate with databases</li>
+                <li>Apply authentication and authorization mechanisms and implement error handling</li>
+                <li>Scale and deploy Node database applications on a cloud platform</li>
+            </ul>
+            <li>JavaScript Full Stack Capstone Project</li>
+            <ul>
+                <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills</li>
+                <li>Build a real-world web application using front-end and back-end technologies</li>
+                <li>Deploy your full-stack web application on the cloud using containers and serverless</li>
+                <li>Apply DevOps and Agile practices by employing CI/CD pipelines and developing user stories</li>
+            </ul>
+            <li>Software Developer Career Guide and Interview Preparation</li>
+            <ul>
+                <li>Describe the role of a software engineer and some career path options as well as the prospective opportunities in the field.</li>
+                <li>Explain how to build a foundation for a job search, including researching job listings, writing a resume, and making a portfolio of work.</li>
+                <li>Summarize what a candidate can expect during a typical job interview cycle, different types of interviews, and how to prepare for interviews.</li>
+                <li>Explain how to give an effective interview, including techniques for answering questions and how to make a professional personal presentation.</li>
+            </ul>
+        </ul>
+        <h2>What you'll obtain after completing this site:</h2>
+        <ul>
+            <li>Master the full-stack development languages, frameworks, tools, and technologies to develop
+                job-ready skills valued by employers.</li>
+            <li>Write, deploy, and scale cloud-native back-end applications using Node, NoSQL databases, containers,
+                microservices, and serverless.</li>
+            <li>Develop websites and front-end software using HTML, CSS, JavaScript, and React.</li>
+            <li>Employ DevOps practices and Agile methodologies to continuously build and deploy software using
+                CI/CD tools.</li>
+        </ul>
+        <script src="script.js"></script>
 </body>
+
 </html>
