--- a/index.html
+++ b/index.html
@@ -14,130 +14,139 @@
         <h1>VSCRIPT</h1>
     </header>
 
-    <section class="content">
-        <p>This course will cover the following:</p>
-
+    <!-- Introduction to Software Engineering -->
+    <section class="section" id="intro-software-engineering">
+        <h2>Introduction to Software Engineering</h2>
         <ul>
-            <li>Introduction to Software Engineering
-                <ul>
-                    <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools, technologies, and stacks.</li>
-                    <li>List different types of programming languages and create basic programming constructs such as loops and conditions using Python.</li>
-                    <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
-                    <li>Summarize the skills required in software engineering and describe the career options it provides.</li>
-                </ul>
-            </li>
-
-            <li>Introduction to HTML, CSS, & JavaScript
-                <ul>
-                    <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end, server-side, and full stack.</li>
-                    <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
-                    <li>Create and structure basic web pages using HTML and style them with CSS.</li>
-                    <li>Develop dynamic web pages with interactive features using JavaScript.</li>
-                </ul>
-            </li>
-
-            <li>Getting Started with Git and GitHub
-                <ul>
-                    <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
-                    <li>Explain basic Git concepts such as repositories and branches used for distributed version control and social coding.</li>
-                    <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</li>
-                    <li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
-                </ul>
-            </li>
-
-            <li>JavaScript Programming Essentials
-                <ul>
-                    <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore arrays, DOM, AJAX, and debugging techniques.</li>
-                    <li>Explore handling errors and exceptions, functions and events, apply string manipulation and error-handling techniques, and traverse the DOM.</li>
-                    <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss modifying the appearance of DOM elements.</li>
-                    <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages, and AJAX to fetch and display data from APIs.</li>
-                </ul>
-            </li>
-
-            <li>Developing Front-End Apps with React
-                <ul>
-                    <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including React, JSX, and ES6.</li>
-                    <li>Build dynamic front-end applications quickly and easily with reusable React components.</li>
-                    <li>Employ various React concepts and features, including props, states, hooks, forms, and Redux.</li>
-                    <li>Demonstrate your React skills by building several front-end applications such as a shopping cart.</li>
-                </ul>
-            </li>
-
-            <li>Developing Back-End Apps with Node.js and Express
-                <ul>
-                    <li>Create server-side applications using the Node.js JavaScript run time.</li>
-                    <li>Extend your Node.js applications with third-party packages and frameworks, including Express.</li>
-                    <li>Use npm to manage Node.js packages in your Node.js application.</li>
-                    <li>Develop asynchronous callback functions and promises to complete asynchronous operations.</li>
-                </ul>
-            </li>
-
-            <li>Get Started With Cloud Native, DevOps, and NoSQL
-                <ul>
-                    <li>Explore cloud native applications concepts and methodologies, recognize CNCF’s impact, and analyze the benefits of CI/CD, Agile, and Scrum.</li>
-                    <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the principles and characteristics of MongoDB.</li>
-                    <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile development process.</li>
-                    <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data operations using MongoDB and CRUD operations.</li>
-                </ul>
-            </li>
-
-            <li>Introduction to Containers with Docker, Kubernetes & OpenShift
-                <ul>
-                    <li>Using containers, learn how to move applications quickly across any environment.</li>
-                    <li>Build cloud-native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
-                    <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container management system.</li>
-                    <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services, replicasets, and others in a declarative way.</li>
-                </ul>
-            </li>
-
-            <li>Application Development using Microservices and Serverless
-                <ul>
-                    <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic architectures.</li>
-                    <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test APIs.</li>
-                    <li>Create and deploy microservices using Docker containers and serverless technologies like IBM Code Engine.</li>
-                    <li>Practice hands-on with labs and projects using a no-charge cloud-based environment.</li>
-                </ul>
-            </li>
-
-            <li>Node.js & MongoDB: Developing Back-end Database Applications
-                <ul>
-                    <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases.</li>
-                    <li>Develop secure RESTful APIs using Node and Express to communicate with databases.</li>
-                    <li>Apply authentication and authorization mechanisms and implement error handling.</li>
-                    <li>Scale and deploy Node database applications on a cloud platform.</li>
-                </ul>
-            </li>
-
-            <li>JavaScript Full Stack Capstone Project
-                <ul>
-                    <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills.</li>
-                    <li>Build a real-world web application using front-end and back-end technologies.</li>
-                    <li>Deploy your full-stack web application on the cloud using containers and serverless technologies.</li>
-                    <li>Apply DevOps and Agile practices by employing CI/CD pipelines and developing user stories.</li>
-                </ul>
-            </li>
-
-            <li>Software Developer Career Guide and Interview Preparation
-                <ul>
-                    <li>Describe the role of a software engineer and some career path options as well as the prospective opportunities in the field.</li>
-                    <li>Explain how to build a foundation for a job search, including researching job listings, writing a resume, and making a portfolio of work.</li>
-                    <li>Summarize what a candidate can expect during a typical job interview cycle, different types of interviews, and how to prepare for interviews.</li>
-                    <li>Explain how to give an effective interview, including techniques for answering questions and how to make a professional personal presentation.</li>
-                </ul>
-            </li>
+            <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools, technologies, and stacks.</li>
+            <li>List different types of programming languages and create basic programming constructs such as loops and conditions using Python.</li>
+            <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
+            <li>Summarize the skills required in software engineering and describe the career options it provides.</li>
         </ul>
     </section>
 
-    <section class="outcome">
-        <h2>What you'll obtain after completing this site:</h2>
+    <!-- Introduction to HTML, CSS, & JavaScript -->
+    <section class="section" id="intro-html-css-js">
+        <h2>Introduction to HTML, CSS, & JavaScript</h2>
         <ul>
-            <li>Master full-stack development languages, frameworks, tools, and technologies to develop job-ready skills valued by employers.</li>
-            <li>Write, deploy, and scale cloud-native back-end applications using Node, NoSQL databases, containers, microservices, and serverless technologies.</li>
-            <li>Develop websites and front-end software using HTML, CSS, JavaScript, and React.</li>
-            <li>Employ DevOps practices and Agile methodologies to continuously build and deploy software using CI/CD tools.</li>
+            <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end, server-side, and full stack.</li>
+            <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
+            <li>Create and structure basic web pages using HTML and style them with CSS.</li>
+            <li>Develop dynamic web pages with interactive features using JavaScript.</li>
         </ul>
     </section>
 
+    <!-- Getting Started with Git and GitHub -->
+    <section class="section" id="getting-started-git">
+        <h2>Getting Started with Git and GitHub</h2>
+        <ul>
+            <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
+            <li>Explain basic Git concepts such as repositories and branches used for distributed version control and social coding.</li>
+            <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</li>
+            <li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
+        </ul>
+    </section>
+
+    <!-- JavaScript Programming Essentials -->
+    <section class="section" id="js-programming-essentials">
+        <h2>JavaScript Programming Essentials</h2>
+        <ul>
+            <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore arrays, DOM, AJAX, and debugging techniques.</li>
+            <li>Explore handling errors and exceptions, functions and events, apply string manipulation and error-handling techniques, and traverse the DOM.</li>
+            <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss modifying the appearance of DOM elements.</li>
+            <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages, and AJAX to fetch and display data from APIs.</li>
+        </ul>
+    </section>
+
+    <!-- Developing Front-End Apps with React -->
+    <section class="section" id="react-frontend-apps">
+        <h2>Developing Front-End Apps with React</h2>
+        <ul>
+            <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including React, JSX, and ES6.</li>
+            <li>Build dynamic front-end applications quickly and easily with reusable React components.</li>
+            <li>Employ various React concepts and features, including props, states, hooks, forms, and Redux.</li>
+            <li>Demonstrate your React skills by building several front-end applications such as a shopping cart.</li>
+        </ul>
+    </section>
+
+    <!-- Developing Back-End Apps with Node.js and Express -->
+    <section class="section" id="node-express-backend">
+        <h2>Developing Back-End Apps with Node.js and Express</h2>
+        <ul>
+            <li>Create server-side applications using the Node.js JavaScript runtime.</li>
+            <li>Extend your Node.js applications with third-party packages and frameworks, including Express.</li>
+            <li>Use npm to manage Node.js packages in your Node.js application.</li>
+            <li>Develop asynchronous callback functions and promises to complete asynchronous operations.</li>
+        </ul>
+    </section>
+
+    <!-- Get Started With Cloud Native, DevOps, and NoSQL -->
+    <section class="section" id="cloud-devops-nosql">
+        <h2>Get Started With Cloud Native, DevOps, and NoSQL</h2>
+        <ul>
+            <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the benefits of CI/CD, Agile, and Scrum.</li>
+            <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the principles and characteristics of MongoDB.</li>
+            <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile development process.</li>
+            <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data operations using MongoDB and CRUD operations.</li>
+        </ul>
+    </section>
+
+    <!-- Introduction to Containers with Docker, Kubernetes & OpenShift -->
+    <section class="section" id="containers-docker-k8s">
+        <h2>Introduction to Containers with Docker, Kubernetes & OpenShift</h2>
+        <ul>
+            <li>Using containers, learn how to move applications quickly across any environment.</li>
+            <li>Build cloud-native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
+            <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container management system.</li>
+            <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services, replicasets, and others in a declarative way.</li>
+        </ul>
+    </section>
+
+    <!-- Application Development using Microservices and Serverless -->
+    <section class="section" id="microservices-serverless">
+        <h2>Application Development using Microservices and Serverless</h2>
+        <ul>
+            <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic architectures.</li>
+            <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test APIs.</li>
+            <li>Create and deploy microservices using Docker containers and serverless technologies like IBM Code Engine.</li>
+            <li>Practice hands-on with labs and projects using a no-charge cloud-based environment.</li>
+        </ul>
+    </section>
+
+    <!-- Node.js & MongoDB: Developing Back-end Database Applications -->
+    <section class="section" id="node-mongodb-backend">
+        <h2>Node.js & MongoDB: Developing Back-end Database Applications</h2>
+        <ul>
+            <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases.</li>
+            <li>Develop secure RESTful APIs using Node and Express to communicate with databases.</li>
+            <li>Apply authentication and authorization mechanisms and implement error handling.</li>
+            <li>Scale and deploy Node database applications on a cloud platform.</li>
+        </ul>
+    </section>
+
+    <!-- JavaScript Full Stack Capstone Project -->
+    <section class="section" id="capstone-project">
+        <h2>JavaScript Full Stack Capstone Project</h2>
+        <ul>
+            <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills.</li>
+            <li>Build a real-world web application using front-end and back-end technologies.</li>
+            <li>Deploy your full-stack web application on the cloud using containers and serverless technologies.</li>
+            <li>Apply DevOps and Agile practices by employing CI/CD pipelines and developing user stories.</li>
+        </ul>
+    </section>
+
+    <!-- Software Developer Career Guide and Interview Preparation -->
+    <section class="section" id="career-guide-interview">
+        <h2>Software Developer Career Guide and Interview Preparation</h2>
+        <ul>
+            <li>Describe the role of a software engineer and some career path options as well as the prospective opportunities in the field.</li>
+            <li>Explain how to build a foundation for a job search, including researching job listings, writing a resume, and making a portfolio of work.</li>
+            <li>Summarize what a candidate can expect during a typical job interview cycle, different types of interviews, and how to prepare for interviews.</li>
+            <li>Explain how to give an effective interview, including techniques for answering questions and how to make a professional personal presentation.</li>
+        </ul>
+    </section>
+
+    <!-- Footer Section -->
     <footer>
         <p>© 2025 VanillaScript. All rights reserved.</p>
     </footer>
