resetting because i messed up the ChatGPT coding

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <h1>VSCRIPT</h1>
     </header>
 
-    <!-- Introduction to Software Engineering -->
-    <section class="section" id="intro-software-engineering">
+    <section>
         <h2>Introduction to Software Engineering</h2>
         <ul>
             <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
@@ -27,8 +26,7 @@
         </ul>
     </section>
 
-    <!-- Introduction to HTML, CSS, & JavaScript -->
-    <section class="section" id="intro-html-css-js">
+    <section>
         <h2>Introduction to HTML, CSS, & JavaScript</h2>
         <ul>
             <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end,
@@ -39,8 +37,7 @@
         </ul>
     </section>
 
-    <!-- Getting Started with Git and GitHub -->
-    <section class="section" id="getting-started-git">
+    <section>
         <h2>Getting Started with Git and GitHub</h2>
         <ul>
             <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
@@ -52,8 +49,7 @@
         </ul>
     </section>
 
-    <!-- JavaScript Programming Essentials -->
-    <section class="section" id="js-programming-essentials">
+    <section>
         <h2>JavaScript Programming Essentials</h2>
         <ul>
             <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore
@@ -67,8 +63,7 @@
         </ul>
     </section>
 
-    <!-- Developing Front-End Apps with React -->
-    <section class="section" id="react-frontend-apps">
+    <section>
         <h2>Developing Front-End Apps with React</h2>
         <ul>
             <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including
@@ -79,8 +74,7 @@
         </ul>
     </section>
 
-    <!-- Developing Back-End Apps with Node.js and Express -->
-    <section class="section" id="node-express-backend">
+    <section>
         <h2>Developing Back-End Apps with Node.js and Express</h2>
         <ul>
             <li>Create server-side applications using the Node.js JavaScript runtime.</li>
@@ -90,8 +84,7 @@
         </ul>
     </section>
 
-    <!-- Get Started With Cloud Native, DevOps, and NoSQL -->
-    <section class="section" id="cloud-devops-nosql">
+    <section>
         <h2>Get Started With Cloud Native, DevOps, and NoSQL</h2>
         <ul>
             <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the
@@ -105,8 +98,7 @@
         </ul>
     </section>
 
-    <!-- Introduction to Containers with Docker, Kubernetes & OpenShift -->
-    <section class="section" id="containers-docker-k8s">
+    <section>
         <h2>Introduction to Containers with Docker, Kubernetes & OpenShift</h2>
         <ul>
             <li>Using containers, learn how to move applications quickly across any environment.</li>
@@ -118,8 +110,7 @@
         </ul>
     </section>
 
-    <!-- Application Development using Microservices and Serverless -->
-    <section class="section" id="microservices-serverless">
+    <section>
         <h2>Application Development using Microservices and Serverless</h2>
         <ul>
             <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic
@@ -132,8 +123,7 @@
         </ul>
     </section>
 
-    <!-- Node.js & MongoDB: Developing Back-end Database Applications -->
-    <section class="section" id="node-mongodb-backend">
+    <section>
         <h2>Node.js & MongoDB: Developing Back-end Database Applications</h2>
         <ul>
             <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases.</li>
@@ -143,8 +133,7 @@
         </ul>
     </section>
 
-    <!-- JavaScript Full Stack Capstone Project -->
-    <section class="section" id="capstone-project">
+    <section>
         <h2>JavaScript Full Stack Capstone Project</h2>
         <ul>
             <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills.</li>
@@ -154,8 +143,7 @@
         </ul>
     </section>
 
-    <!-- Software Developer Career Guide and Interview Preparation -->
-    <section class="section" id="career-guide-interview">
+    <section>
         <h2>Software Developer Career Guide and Interview Preparation</h2>
         <ul>
             <li>Describe the role of a software engineer and some career path options as well as the prospective
@@ -169,7 +157,6 @@
         </ul>
     </section>
 
-    <!-- Footer Section -->
     <footer>
         <p>© 2025 VanillaScript. All rights reserved.</p>
     </footer>
