--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-        <h2><a href="/src/introToSoftware.html">Introduction to Software Engineering</a></h2>
+        <h2><a href="/src/Course1/introToSoftware.html">Introduction to Software Engineering</a></h2>
         <ul>
             <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
                 technologies, and stacks.</li>
