testing link fixing pt 2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <section>
-        <h2><a href="/src/Course1/introToSoftware.html">Introduction to Software Engineering</a></h2>
+        <h2><a href="/src/Course1/introToSoftware.html" target="_blank">Introduction to Software Engineering</a></h2>
         <ul>
             <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
                 technologies, and stacks.</li>
@@ -27,7 +27,7 @@
     </section>
 
     <section>
-        <h2>Introduction to HTML, CSS, & JavaScript</h2>
+        <h2><a href="/src/Course2/introToTrifecta.html" target="_blank">Intro to HTML, CSS, & JavaScript</a></h2>
         <ul>
             <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end,
                 server-side, and full stack.</li>
